--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <li id=instagram><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram fa-1x" style="color:#fc4850"></i> INSTAGRAM</a></li>
                     <li id=twitter><a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter fa-1x" style="color:#fc4850"></i> TWITTER</a></li>
                     <li id=whatsapp><a href="https://api.whatsapp.com/send?phone=+541167181279" target="_blank"><i class="fab fa-whatsapp fa-1x" style="color:#fc4850"></i> WHATSAPP</a> </li>
-                    <li id=form><a href="#0" target="_blank"><i class="fas fa-hamburger fa-1x" style="color:#fc4850"></i> CONTACTO/RESERVAS</a></li>
+                    <li id=form><a href="/Contacto/contact.html" target="_blank"><i class="fas fa-hamburger fa-1x" style="color:#fc4850"></i> CONTACTO/RESERVAS</a></li>
                 </ul>
             </div>
         </div>
